# 2022.4_DR1

./: .env.default  .pre-commit-config.yaml  README.md  dev.Dockerfile  docker-compose.yml  python-version
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: .gitkeep  conftest.py
backend/classroom/: Dockerfile  manage.py  pyproject.toml
backend/classroom/classroom/: asgi.py  settings.py  urls.py  wsgi.py
backend/classroom/classrooms/: apps.py  models.py  serializers.py  test_views.py  urls.py  views.py
backend/classroom/classrooms/migrations/: 0001_initial.py
backend/classroom/fixtures/factories/: classroom_models.py
backend/libs/: __init__.py
backend/libs/events/: pyproject.toml
backend/libs/events/events/: __init__.py  events.py
backend/school_class/: Dockerfile  manage.py  pyproject.toml
backend/school_class/classes/: models.py  serializers.py  tests_views.py  urls.py  views.py
backend/school_class/classes/migrations/: 0001_initial.py
backend/school_class/school_class/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: docker_postgres_init.sql
